@@ -1,25 +1,39 @@
-FROM openjdk:8u232-jdk-slim
-LABEL maintainer=jibijose@yahoo.com
-EXPOSE 8080
+FROM openjdk:8u242-jdk-slim AS builder
 
-RUN apt-get update -qq
+ARG MVN_VERSION=3.6.3
 
-RUN apt-get install wget -y -qq
-RUN wget https://downloads.apache.org/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz --quiet -O /opt/apache-maven-3.6.3-bin.tar.gz
-RUN tar -xvzf /opt/apache-maven-3.6.3-bin.tar.gz -C /opt
-RUN rm -rf /opt/apache-maven-3.6.3-bin.tar.gz
-RUN mv /opt/apache-maven-3.6.3 /opt/maven
+RUN apt-get update -qq && \
+    apt-get install wget -y -qq && \
+    wget https://downloads.apache.org/maven/maven-3/${MVN_VERSION}/binaries/apache-maven-${MVN_VERSION}-bin.tar.gz --quiet -O /opt/apache-maven-${MVN_VERSION}-bin.tar.gz && \
+    tar -xzf /opt/apache-maven-${MVN_VERSION}-bin.tar.gz -C /opt && \
+    mv /opt/apache-maven-${MVN_VERSION} /opt/maven
 
 COPY src /tmp/app/src/
 COPY templates /tmp/app/templates/
 COPY pom.xml /tmp/app/
-RUN /opt/maven/bin/mvn -f /tmp/app/pom.xml clean package -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
-RUN mkdir /service
-RUN cp /tmp/app/target/httpbin-*.*.*.jar /service/app.jar
+RUN /opt/maven/bin/mvn -f /tmp/app/pom.xml clean package -DskipTests -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 
-RUN rm -rf /tmp/app
-RUN rm -rf ~/.m2
-RUN rm -rf /opt/maven
 
-ENTRYPOINT ["java", "-jar", "/service/app.jar"]
+FROM openjdk:8u242-jdk-slim AS packager
+LABEL maintainer=jibijose@yahoo.com
+EXPOSE 8080
+
+COPY --from=builder /tmp/app/target/httpbin-*.*.*.jar /service/app.jar
+
+ENV MAXRAMFRACTION=1
+ENV GCTIMERATIO=2
+ENV COMMAND "java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:+UseG1GC -XX:MaxGCPauseMillis=10000 -XX:MaxGCMinorPauseMillis=100 -XX:GCTimeRatio=2 -jar /service/app.jar"
+
+RUN apt-get update -qq && \
+    apt-get install sudo -y -qq && \
+    apt-get install curl -y -qq && \
+    apt-get install procps -y -qq && \
+    groupadd -g 1000 appgroup && \
+    useradd -r -s /bin/bash -u 1000 -g appgroup -m appuser -p "$(openssl passwd -1 appuser)" && \
+    usermod -aG sudo appuser
+
+USER appuser
+#ENTRYPOINT java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap "-XX:MaxRAMFraction=${MAXRAMFRACTION}" -XX:+UseG1GC "-XX:GCTimeRatio=${GCTIMERATIO}" -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=30 -jar /service/app.jar
+#ENTRYPOINT java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap "-XX:MaxRAMFraction=${MAXRAMFRACTION}" -XX:+UseG1GC -XX:MaxGCPauseMillis=10000 -XX:MaxGCMinorPauseMillis=100 "-XX:GCTimeRatio=${GCTIMERATIO}" -jar /service/app.jar
+ENTRYPOINT ${COMMAND}
